src/css/webkit/store/game.css
/* ... */
/*^ Negative */
.game_bg.application #game_highlights .rightcol .glance_ctn_responsive_left .user_reviews .game_review_summary  {
    color: rgb(var(--st-red));
}

/*^ Mixed */
.game_bg.application #game_highlights .rightcol .glance_ctn_responsive_left .user_reviews .game_review_summary.mixed {
    color: rgb(var(--st-yellow));
}

/*^ Positive */
.game_bg.application #game_highlights .rightcol .glance_ctn_responsive_left .user_reviews .game_review_summary.positive {
    color: rgb(var(--st-green));
}


/** Release Date */
.game_bg.application #game_highlights .rightcol .glance_ctn_responsive_left .release_date {
    padding: 12px 0;
}


/** Devs & Publisher */
.game_bg.application #game_highlights .rightcol .glance_ctn_responsive_left .dev_row:has(#developers_list) {
    padding-bottom: 4px;
}

.game_bg.application #game_highlights .rightcol .glance_ctn_responsive_left .dev_row .summary a {
    white-space: normal;
    color: rgb(var(--st-blue));
}
.game_bg.application #game_highlights .rightcol .glance_ctn_responsive_left .dev_row .summary a:hover {
    color: rgb(var(--st-blue-hover));
}


/*
! Tags
*/
.game_bg.application #game_highlights .rightcol .glance_ctn_responsive_right {
    margin-top: auto;
}

.game_bg.application #game_highlights .rightcol .glance_ctn_responsive_right .popular_tags_ctn {
    margin: 0;
}


/* Text */
.game_bg.application #game_highlights .rightcol .glance_ctn_responsive_right .responsive_block_header {
    display: flex;
    line-height: 19px;
    color: #97A0A8;
}
.game_bg.application #game_highlights .rightcol .glance_ctn_responsive_right .responsive_block_header::after {
    content: ":";
    line-height: 19px;
    color: #97A0A8;
}

/* Lable */
.game_bg.application #game_highlights .rightcol .glance_ctn_responsive_right .popular_tags_ctn .glance_tags_label {
    display: none;
}


/* Tags */
.game_bg.application #game_highlights .rightcol .glance_ctn_responsive_right .popular_tags_ctn .popular_tags {
    display: flex;
    flex-wrap: wrap;
    gap: 6px;
    height: unset;
    margin-top: 6px;
}

.game_bg.application #game_highlights .rightcol .glance_ctn_responsive_right .popular_tags_ctn .popular_tags .app_tag {
    height: unset;
    margin: 0;
    padding: 6px 8px;
    line-height: unset;
    font-weight: 500;
    border-radius: 8px;
    color: #8f98a0;
    background-color: rgb(var(--st-blue), .1);
}
.game_bg.application #game_highlights .rightcol .glance_ctn_responsive_right .popular_tags_ctn .popular_tags .app_tag:hover {
    background: unset;
    background-color: rgb(var(--st-blue), .3);
}



/*
& Already Owned
*/
body.v6.game_bg.application .game_area_already_owned.page_content {
    display: flex;
    width: auto !important;
    height: unset;
    padding: 12px !important;
    font-size: 16px;
    font-weight: 600;
    line-height: unset;
    border: 3px solid rgb(var(--st-green));
    border-radius: 8px;
    color: rgb(var(--st-green));
    background: unset;
    background-color: rgb(var(--st-green), .4);
}


/** Icon */
.game_bg.application .game_area_already_owned .ds_flag {
    display: none;
}

/*^ Custom */ /* custom-icon */
.game_bg.application .game_area_already_owned::before {
    content: "\f4ab";
    display: inline-block;
    margin-right: 6px;
    font-size: 20px;
    font-family: FluentSystemIcons-Filled !important;
    font-style: normal;
    font-weight: normal !important;
    font-variant: normal;
    text-transform: none;
    line-height: 1;
    -webkit-font-smoothing: antialiased;
}




/*
& Game Review
*/
.game_bg.application .game_area_play_stats {
    max-width: unset;
    margin: 0 0 16px;
    padding: 12px;
    border-radius: 8px;
    background: none;
    background-color: rgb(var(--st-color-2));
}
.game_bg.application:has(.game_area_already_owned) .game_area_play_stats {
    margin-top: 16px;
}


/*
! Play button & Playtime
*/
/** Play button */
.game_bg.application .game_area_play_stats .already_owned_actions {
    display: none;
}


/** Playtime */
.game_bg.application .game_area_play_stats .myactivity_block {
    display: none;
}


/*
! Content
*/
.game_bg.application .game_area_play_stats #review_create {
    max-width: unset;
    padding: 0;
}


/** Title */
.game_bg.application .game_area_play_stats #review_create h2 {
    padding: 0;
    font-weight: 400;
    border: none;
    color: #fff;
}


/** Description */
.game_bg.application .game_area_play_stats #review_create p {
    margin-bottom: 12px;
    line-height: 14px
}


/** Error */
.game_bg.application .game_area_play_stats #review_create .error_message {
    font-weight: 600;
    color: rgb(var(--st-red));
}


/** Avatar */
.game_bg.application .game_area_play_stats #review_create .avatar_block {
    display: none;
}


/** Textarea */
.game_bg.application .game_area_play_stats #review_create .input_box {
    width: -webkit-fill-available !important;
    max-width: unset;
    border: 3px solid rgb(var(--st-color-5));
    border-radius: 8px;
    background-color: rgb(var(--st-color-3));
    box-shadow: none;
}


/** Controls */
.game_bg.application .game_area_play_stats #review_create .controls {
    display: flex;
    justify-content: space-between;
    gap: 12px;
    margin-top: 12px;
}

/*^ Settings */
.game_bg.application .game_area_play_stats #review_create .controls .review_controls {
    max-width: unset;
    margin: 0;
    padding: 0;
    background: unset;
}

/*^ Yes/No buttons */
.game_bg.application .game_area_play_stats #review_create .controls .review_control_didyouenjoy {
    display: none;
}

.game_bg.application .game_area_play_stats #review_create .controls .review_create_vote_controls {
    display: flex;
    gap: 6px;
}


/*^ Post review */





/*
& Game Purchase / Infos etc.
*/
.game_bg.application .game_description_column {
    display: flex;
    flex-direction: column;
    gap: 16px;
    margin: 0;
}

/** clear:; */
.game_bg.application .page_content.middle_page div[style="clear: both;"] {
    display: none;
}
/* ... */

